add adminUserService for serving UsersDB database